# ZHTP

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  NETWORK.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  SETUP.md  TODO.md  ZHTP_IMPLEMENTATION.md  build-contracts.bat  build-contracts.sh  index.html  launch.sh  run-zhtp-linux.sh  run-zhtp.bat  run_network.bat  setup.sh  simple-installer.ps1  start_test.bat  validate-governance.ps1
app_installer/: Cargo-complex.toml  Cargo-minimal.toml  Cargo.toml  README.md  build-installer.bat  build-installer.sh  index.html  run-dev.bat  run-dev.sh  tauri-complex.conf.json  tauri-simple.conf.json  tauri.conf.json  tauri_v1.conf.json
app_installer/src/: index.html  lib-simple.rs  lib.rs  main.rs
browser/: index.html  welcome.html
contracts/: Cargo.toml  Cargo_minimal.toml  build.bat  build.rs  build.sh  test_contracts.rs  token.json  token.wat.bak
contracts/src/: lib.rs  lib_minimal.rs  marketplace_contract.rs  news_contract.rs  social_contract.rs
docs/: README.md  architecture.md  best-practices.md  first-dapp.md  governance.md  installation.md  quick-start.md  raspberry-pi-guide.md  security.md  system_verification_plan.md
docs/api/: README.md  javascript.md  python.md  rest.md  rust.md
docs/examples/: README.md
docs/guides/: README.md  dapp-development.md  smart-contracts.md
docs/templates/: README.md
docs/templates/voting-dao/: README.md
docs/ui/: react.md  vue.md
examples/: README.md  basic_networking.rs  decentralized_app.rs  deploy_dapp.rs  discovery_node.rs  multi_node_routing.rs  whisper.rs  zhtp_mainnet_launch.rs  zhtp_testnet.rs
sdk/python/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
sdk/python/examples/: advanced_usage.py  basic_usage.py
sdk/python/zhtp/: __init__.py  certificates.py  cli.py  client.py  contracts.py  crypto.py  dapps.py  dns.py  exceptions.py  network.py  routing.py  storage.py
src/: blockchain.rs  consensus.rs  integration_tests.rs  lib.rs  main.rs  main_simple.rs  network.rs  network_service.rs  security_tests.rs
src/browser/: mod.rs
src/discovery/: mod.rs
src/storage/: content.rs  dht.rs  mod.rs
src/zhtp/: contracts.rs  crypto.rs  dao.rs  economics.rs  mod.rs  p2p_network.rs  tunnel.rs  zk_consensus.rs  zk_proofs.rs  zk_transactions.rs
src/zhtp/bridge/: mod.rs
tests/: bridge_integration_test.rs  integration_test.rs  integration_tests.rs  routing_test.rs  system_test.rs  tunnel_integration_test.rs
tests/common/: mod.rs
tests/fixtures/: test_cert.pem  test_key.pem
tests/test_helpers/: mod.rs
