[package]
name = "decentralized_network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
bincode = "1.3"
chrono = "0.4"
digest = "0.10"
ed25519-dalek = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
wasmi = { version = "0.31" }
wat = "1.0"

[build-dependencies]
wasmer = "2.3"
wasmer-compiler = "2.3"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"

[[example]]
name = "discovery_node"
path = "examples/discovery_node.rs"

[[example]]
name = "whisper"
path = "examples/whisper.rs"

[[example]] 
name = "decentralized_app"
path = "examples/decentralized_app.rs"

[workspace]
members = [
    "contracts"
]
