[package]
name = "zhtp-installer"
version = "1.0.0"
description = "ZHTP Network - One-Click Installer"
authors = ["ZHTP Team"]
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.5" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "zhtp-installer"
path = "src/main.rs"
