[package]
name = "zhtp-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = { version = "1.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
wat = "1.0"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"