[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhtp-sdk"
version = "1.0.0"
description = "Complete decentralized internet replacement - no HTTP, DNS, or SSL dependencies"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ZHTP Network", email = "sdk@zhtp.network"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]
keywords = [
    "zhtp", "decentralized", "blockchain", "zero-knowledge", "quantum-resistant",
    "privacy", "p2p", "distributed", "dapp", "smart-contracts", "anonymous",
    "no-http", "no-dns", "no-ssl", "replacement-internet"
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.18.0",
    "aiofiles>=23.0.0",
    "websockets>=11.0.0",
    "msgpack>=1.0.0",
    "asyncio-throttle>=1.0.0",
    "netifaces>=0.11.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
full = [
    "cryptography>=41.0.0",
    "aiofiles>=23.0.0",
    "websockets>=11.0.0",
    "pycryptodome>=3.18.0",
]

[project.scripts]
zhtp = "zhtp.cli:main"
zhtp-deploy = "zhtp.deploy:main"
zhtp-node = "zhtp.node:main"

[project.urls]
Homepage = "https://zhtp.network"
Documentation = "https://docs.zhtp.network/api/python/"
Repository = "https://github.com/zhtp-network/zhtp-python-sdk"
Issues = "https://github.com/zhtp-network/zhtp-python-sdk/issues"
Changelog = "https://github.com/zhtp-network/zhtp-python-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["zhtp*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]
